[package]
name = "modified-time-fix"
authors = ["rctlmk <rctlmk@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.33.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.119"

[dependencies]
filetime = "0.2.15"
clap = { version = "3.1.2", features = ["cargo"] }

[[bin]]
name = "mtime-fix"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"
